agregue un quiz basico

--- a/templates/activitytree/activity.html
+++ b/templates/activitytree/activity.html
@@ -5,6 +5,11 @@
 {% block content %}
 
 
+ <ul class="breadcrumb">
+            <li><a href="#">POO</a></li>
+            <li><a href="#">Slug</a> </li>
+            <li class="active">Introducción</li>
+ </ul>
 
 
     <div class = "row">
