--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,25 +4,45 @@
 
 {% block content %}
 
+
+<form class="form-horizontal" role="form" method="post" action="{% url 'django.contrib.auth.views.login' %}" >{% csrf_token %}
+
+  <p class="lead">  Por favor, regístrate </p>
+
 {% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
+
+<div class="alert alert-danger alert-dismissable">
+    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+    <p>Inténtalo de nuevo, el usuario y contraseña no coinciden.</p> </div>
+
+
 {% endif %}
 
-<form method="post" action="{% url 'django.contrib.auth.views.login' %}">{% csrf_token %}
-    Por favor registrate, con tu correo como <b>Username</b> y tu número de control como <b>Password</b>.
 
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
+  <div class="form-group">
+    <label for="id_username" class="col-sm-2 control-label">Usuario:</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="inputEmail3" placeholder="Usuario" id="id_username" maxlength="254" name="username">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="id_password" class="col-sm-2 control-label">Password:</label>
+    <div class="col-sm-10">
+      <input type="password" class="form-control" id="id_password" placeholder="Password" name="password">
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Login</button>
+    </div>
+  </div>
+<input type="hidden" name="next" value="" />
 
-<input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
 </form>
+
+
+
+
+
+
 {% endblock content %}
