--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -248,6 +248,16 @@ background-position: left top;
 .second-navbar{
     top:40px;
 }
+    .pager li > span
+    {
+     color: #428BCA;
+     cursor:pointer;
+    }
+
+    .pager li > span:hover, .pager li > span:focus
+    {
+     background-color: #eeeeee;
+    }
 	  </style>
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -257,6 +267,10 @@ background-position: left top;
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+
+
+
   </head>
 
   <body>
@@ -349,5 +363,36 @@ background-position: left top;
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
+
+  <script>
+
+        $( document ).ready(function() {
+            $( ".nav_next" ).bind( "click", function( event ) {
+
+                   var form =  $("#learning_activity_form");
+                   form.append( $('<input>').attr({ type: 'hidden',
+                                                    name: 'nav_event',
+                                                    value:'next'
+                                                  }));
+
+                  form.submit();
+
+
+
+             });
+
+            $( ".nav_prev" ).bind( "click", function( event ) {
+                   var form =  $("#learning_activity_form");
+                   form.append( $('<input>').attr({ type: 'hidden',
+                                                    name: 'nav_event',
+                                                    value:'prev'
+                                                  }));
+
+                  form.submit();
+
+            });
+        });
+
+    </script>
   </body>
 </html>
