--- a/templates/activitytree/test.html
+++ b/templates/activitytree/test.html
@@ -29,32 +29,47 @@
             {% endif %}
 
                 {% for o in q.feedback_options %}
-                    <div class="checkbox">
+                 {% if q.interaction == 'choiceInteraction' %}
+                    <div class="checkbox{{ q.inline|yesno:"-inline,," }}">
                         <label>
 
                             <input type="checkbox" value="option_{{ forloop.counter0 }}" name="{{q.id}}" {{ o.1|yesno:"checked,," }}  />
                             {{ o.0 }}
                         </label>
                     </div>
-                   {% endfor %}
+                 {% elif q.interaction == 'simpleChoice' %}
+                    <div class="radio{{ q.inline|yesno:"-inline,," }}">
+                     <label>
+                        <input type="radio" value="option_{{ forloop.counter0 }}" name="{{q.id}}" {{ o.1|yesno:"checked,," }}  />
+                            {{ o.0 }}
+                     </label>
+                </div>
+                {% endif %}
+                {% endfor %}
         {% endfor %}
 
 
     {% else %}
 
 
-
-
     {% for q in content.questions %}
         <h4>{{q.question}} </h4>
             {% for o in q.options %}
-             <div class="checkbox">
-                 <label>
-                    <input type="checkbox" value="option_{{ forloop.counter0 }}" name="{{q.id}}">
-                    {{ o }}
-                 </label>
-            </div>
-
+                {% if q.interaction == 'choiceInteraction' %}
+                 <div class="checkbox{{ q.inline|yesno:"-inline,," }}">
+                     <label>
+                        <input type="checkbox" value="option_{{ forloop.counter0 }}" name="{{q.id}}">
+                        {{ o }}
+                     </label>
+                </div>
+                {% elif q.interaction == 'simpleChoice' %}
+                    <div class="radio{{ q.inline|yesno:"-inline,," }}">
+                     <label>
+                        <input type="radio" value="option_{{ forloop.counter0 }}" name="{{q.id}}">
+                        {{ o }}
+                     </label>
+                </div>
+                {% endif %}
             {% endfor %}
 
         {% endfor %}
