--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -258,6 +258,11 @@ background-position: left top;
     {
      background-color: #eeeeee;
     }
+
+    input.btn
+    {
+        margin-top: 10px;
+    }
 	  </style>
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
