--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -289,7 +289,7 @@ background-position: left top;
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">protoboard.org</a>
+          <a class="navbar-brand" href="/">protoboard.org</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
