--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -36,7 +36,7 @@
       <button type="submit" class="btn btn-default">Login</button>
     </div>
   </div>
-<input type="hidden" name="next" value="" />
+<input type="hidden" name="next" value="{{ next }}" />
 
 </form>
 
