--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -263,7 +263,16 @@ background-position: left top;
     {
         margin-top: 10px;
     }
-	  </style>
+
+
+
+
+     {% block style %}
+
+     {%  endblock style %}
+
+
+    </style>
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
@@ -371,6 +380,8 @@ background-position: left top;
 
   <script>
 
+
+
         $( document ).ready(function() {
             $( ".nav_next" ).bind( "click", function( event ) {
 
@@ -399,5 +410,10 @@ background-position: left top;
         });
 
     </script>
+  {% block scripts %}
+
+
+
+  {% endblock scripts %}
   </body>
 </html>
