--- a/templates/activitytree/program.html
+++ b/templates/activitytree/program.html
@@ -13,6 +13,17 @@
 
     }
 
+ #send_btn_queue
+    {
+     color: #428BCA;
+     cursor:pointer;
+    }
+
+    #send_btn_queue:hover, #send_btn_queue:focus
+    {
+     color:green;
+    }
+
 
 {% endblock style %}
 
@@ -20,41 +31,35 @@
 {% block content %}
 
 
-
-    <h3> Ordena la lista</h3>
-    <div class="panel panel-default">
+  <div class="panel panel-default">
         <div class="panel-heading">
-            <h3 class="panel-title">Editor</h3>
+            <h3 style="display: inline;" class="panel-title">Ordena la Lista</h3>
+            <div class="btn-group pull-right">
+
+
+                <span id="send_btn_queue" class="glyphicon glyphicon-play"></span>
+
+
+
+
+      </div>
+      <div class="clearfix"></div>
 
         </div>
-
         <div class="panel-body">
-            <div id="editor">
-                # Funcion que ordena una lista, puedes utilizar sort()
-                def solution():
-                pass
-            </div>
+            <div id="editor">{{program_quiz.initial_code}}</div>
         </div>
     </div>
 
-    <button id="send_btn_queue" type="button" class="btn btn-primary"> Enviar a la Cola</button>
 
     <div id="info_panel" class="panel panel-default">
         <div id="info_panel_heading" class="panel-heading">
-            <h3 class="panel-title">Instrucciones</h3>
+            <h3 id="instructions-title" class="panel-title">Instrucciones</h3>
         </div>
 
         <div id="info_panel_body" class="panel-body">
 
-            <p>Escribe una función llamada solution la cual reciba como parámetro
-                una lista y regrese la lista ordenada.</p>
-            <p>En caso de recibir como parámetro el valor None debe regresar una lista vacía. </p>
-            <code>
-                <p>>>> solution([4,3,5,1])</p>
-                <p>[1, 3, 4, 5]</p>
-                <p>>>> solution(None)</p>
-                <p>[]</p>
-            </code>
+           {{ program_quiz.instructions|safe }}
 
 
 
@@ -66,7 +71,31 @@
     </div>
 
 
+ <div class="row">
 
+         <form id="learning_activity_form"   role="form" action="{{uri}}" method = "POST">{% csrf_token %}
+
+
+               <ul class="pager">
+                     <li class="previous"><span class="nav_prev" > &larr; Anterior</span></li>
+                    <li class="next"><span class="nav_next">  Siguiente &rarr;</span></li>
+               </ul>
+
+
+        <div class="form-group">
+            <label for="r10">Comentario:</label>
+            <select id="exit" name="objective_measure" class="form-control" >
+				<option value="70"> Ninguno </option>
+				<option value="100">Si le entendí</option>
+				<option value="50">Más o menos  </option>
+				<option value="20"> Para nada </option>
+	        </select>
+
+        </div>
+       </form>
+
+
+    </div>
 
 
 
@@ -134,7 +163,7 @@
                     url: '/execute_queue',
                     type: "POST",
                     contentType: "application/json",
-                    data: JSON.stringify({"jsonrpc": "2.0", "method": "_execute", "params": [code], "id": 1 }),
+                    data: JSON.stringify({"jsonrpc": "2.0", "method": "{{ activity_uri }}", "params": [code], "id": 1 }),
                     dataType: "json",
                     success: function(data, textStatus, jqXHR) {
 
@@ -142,6 +171,7 @@
                             number_of_tries=0;
 
                         $("#info_panel_body").html("");
+                        $('#instructions-title')[0].textContent = "Resultado"
 
                          $('<p>'+ 'En proceso...'+'<p/>', {class:"p"}).appendTo("#info_panel_body");
 
@@ -164,6 +194,7 @@
             success: function(data){
             //Update your dashboard gauge
             number_of_tries++;
+
               $("#info_panel_body").html("");
                     if (data.outcome != -1)
                     {
