--- a/templates/activitytree/welcome.html
+++ b/templates/activitytree/welcome.html
@@ -64,7 +64,7 @@ body {
 
             {% else %}
 
-            <li><a href="/login">Log in</a></li>
+            <li><a href="/login/?next=/welcome">Log in</a></li>
 
             {% endif %}
           </ul>
