--- a/templates/activitytree/welcome.html
+++ b/templates/activitytree/welcome.html
@@ -77,10 +77,10 @@ body {
     <div class="jumbotron">
       <div class="container">
         <h2> <code> !Hola Mundo!</code></h2>
-        <p>Bienvenidos a protoboard.org un prototipo de Sistema de Tutoría Inteligente de código abierto.</p>
-        <p>La plataforma está enfocada a brindar tutorías de programación de manera informal,
-            <a href="/login"> ingresa como alguno de los estudiantes de prueba. </a> y elige algunos de los mini-cursos
-        demo.</p>
+        <p>Bienvenidos a <strong> protoboard.org</strong>, estamos desarrollando una plataforma para generar tutoriales de programación
+            personalizados. La plataforma es de código abierto asi como el material didáctico que producimos.</p>
+        <p>En este prototipo nos enfocaremos a brindar tutorías de programación de manera informal,
+            <a href="/login"> ingresa como uno de los estudiantes de prueba </a> y elige algún mini-curso.</p>
 
         <p><a class="btn btn-default btn-lg" role="button">Ver más &raquo;</a></p>
       </div>
