--- a/templates/activitytree/welcome.html
+++ b/templates/activitytree/welcome.html
@@ -11,11 +11,7 @@
     <!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
-     <!--
-     <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}bluehaze.css" title="Blue Haze stylesheet" />
-    <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}color-scheme.css" title="Blue Haze stylesheet" />
-    -->
-      <!-- Custom styles for this template -->
+        <!-- Custom styles for this template -->
 
     <!-- Custom styles for this template -->
     <style type="text/css" media="screen">
@@ -26,12 +22,17 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
   padding-top: 50px;
+
+
 }
 
-    </style>
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+ .navbar-nav > li >  a.navbar-user
+    {
+    padding-bottom: 0px;
+    padding-top: 0px;
+    }
 
+    </style>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -57,8 +58,8 @@ body {
 
        <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            {% if user.username %}
-             <li><a class="navbar-brand" href="#"> Usuario: {{ user.username }}</a></li>
+            {% if user_name %}
+             <li><a class="navbar-user" href="#"> <img src="{{ user_image }}" alt=""/>  {{ user_name }}</a></li>
 
              <li><a href="/logout">Log out</a></li>
 
@@ -67,6 +68,8 @@ body {
             <li><a href="/login/?next=/welcome">Log in</a></li>
 
             {% endif %}
+
+
           </ul>
 
         </div><!--/.navbar-collapse -->
@@ -122,5 +125,26 @@ body {
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
-  </body>
+
+
+  <script type="text/javascript">
+    (function () {
+        var po = document.createElement('script');
+        po.type = 'text/javascript';
+        po.async = true;
+        po.src = 'https://plus.google.com/js/client:plusone.js?onload=start';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(po, s);
+    })();
+
+
+
+        $('#signout').on('click', function(event) {
+    gapi.auth.signOut();
+});
+
+
+</script>
+
+ </body>
 </html>
