--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -57,7 +57,7 @@
      </div>
 
 
-<form class="form-horizontal" role="form" method="post" action="{% url 'django.contrib.auth.views.login' %}" >{% csrf_token %}
+<form class="form-horizontal" role="form" method="post" action="{% url 'activitytree.views.login' %}" >{% csrf_token %}
 
 
 
@@ -95,8 +95,83 @@
 </form>
 
 
+<div class="row">
+  <div class="col-md-6">
+      <a id="login-facebook-btn" class="btn btn-block btn-social btn-facebook disabled"> <i class="fa fa-facebook"></i>
+        Regístrate con Facebook</a></div>
+  <div class="col-md-1"> </div>
+
+
+  <div class="col-md-6">
+      <a id="loginGoogle" class="btn btn-block btn-social btn-google-plus"><i class="fa fa-google-plus"></i>
+       Regístrate con Google </a>
+  </div>
+</div>
+
+
 
 
 
 
 {% endblock content %}
+
+
+
+{% block scripts %}
+
+    <script type="text/javascript">
+
+  window.___gcfg = {
+    lang: 'es-mx',
+    parsetags: 'explicit'
+  }
+</script>
+
+<script type="text/javascript">
+
+  (function () {
+        var po = document.createElement('script');
+        po.type = 'text/javascript';
+        po.async = true;
+        po.src = 'https://plus.google.com/js/client:plusone.js?onload=render';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(po, s);
+    })();
+
+   /* Executed when the APIs finish loading */
+ function render() {
+
+   // Additional params including the callback, the rest of the params will
+   // come from the page-level configuration.
+   var additionalParams = {
+     'callback': signInCallback,
+     'cookiepolicy': "single_host_origin" ,
+     'clientid':  "{{ plus_id }}"
+
+   };
+
+   // Attach a click listener to a button to trigger the flow.
+   var signinButton = document.getElementById('loginGoogle');
+   signinButton.addEventListener('click', function() {
+     gapi.auth.signIn(additionalParams); // Will use page level configuration
+   });
+ }
+
+    var signInCallback = function (result) {
+        if (result['error']) {
+            alert('An error happened:', result['error']);
+        } else {
+            $('#code').attr('value', result['code']);
+            $('#at').attr('value', result['access_token']);
+            $('#google-plus').submit();
+        }
+    };
+</script>
+
+    <form id="google-plus" method="post" action="{% url 'social:complete' "google-plus" %}">{% csrf_token %}
+    <input id="at" type="hidden" name="access_token" value="" />
+    <input id="code" type="hidden" name="code" value="" />
+</form>
+
+
+{% endblock scripts %}
