--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -158,8 +158,10 @@
  }
 
     var signInCallback = function (result) {
+         alert('Result:', result['error']);
+
         if (result['error']) {
-            alert('An error happened:', result['error']);
+            //alert('An error happened:', result['error']);
         } else {
             $('#code').attr('value', result['code']);
             $('#at').attr('value', result['access_token']);
