Nuevo modelo de ULA_Event, Registro de intentos para actividad tipo programa

--- a/templates/activitytree/test.html
+++ b/templates/activitytree/test.html
@@ -81,11 +81,11 @@
 
         {% if feedback %}
 
-     <input type="submit" name="check" value="Re-try" class="btn btn-primary">
+     <input type="submit" name="check" value="Re-Enviar" class="btn btn-primary">
 
         <ul class="pager">
                      <li class="previous"><span class="nav_prev" > &larr; Anterior</span></li>
-                    <li class="next"><span class="nav_next">  Siguiente &rarr;</span></li>
+                    <li class="next"><span class="nav_next">  Continuar &rarr;</span></li>
         </ul>
 
 
@@ -93,7 +93,7 @@
 
 
 
-        <input type="submit" name="check" value="Submit" class="btn btn-primary">
+        <input type="submit" name="check" value="Enviar" class="btn btn-primary">
 
     {% endif %}
 
