--- a/templates/activitytree/activity.html
+++ b/templates/activitytree/activity.html
@@ -18,7 +18,7 @@
 
                <ul class="pager">
                      <li class="previous"><span class="nav_prev" > &larr; Anterior</span></li>
-                    <li class="next"><span class="nav_next">  Siguiente &rarr;</span></li>
+                    <li class="next"><span class="nav_next">  Continuar &rarr;</span></li>
                </ul>
 
 
