--- a/templates/activitytree/program.html
+++ b/templates/activitytree/program.html
@@ -15,8 +15,18 @@
 
  #send_btn_queue
     {
-     color: #428BCA;
+     color:green;
      cursor:pointer;
+    }
+
+ #send_btn_queue.disabled
+    {
+     color: #eee;
+     cursor:pointer;
+    }
+  #send_btn_queue.disabled:hover, #send_btn_queue.disabled:focus
+    {
+     color:#eee;
     }
 
     #send_btn_queue:hover, #send_btn_queue:focus
@@ -99,7 +109,7 @@
 
                <ul class="pager">
                      <li class="previous"><span class="nav_prev" > &larr; Anterior</span></li>
-                    <li class="next"><span class="nav_next">  Siguiente &rarr;</span></li>
+                    <li class="next"><span class="nav_next">  Continuar &rarr;</span></li>
                </ul>
 
 
@@ -131,6 +141,7 @@
 
     <script type="text/javascript" charset="utf-8">
 	/* Keyboard & Mouse Dynamics*/
+
 var keypresses = []; //Keyboard
 var mousepresses =[]; //Mouse clicks
 var mouse = []; //Mouse movement
@@ -303,6 +314,7 @@ $(document).ready(function() {
 
          if ( $(this).hasClass("disabled") == false )
          {
+         $("#send_btn_queue").addClass("disabled" );
          var code = editor.getValue();
 
            // alert(code);
@@ -312,7 +324,8 @@ $(document).ready(function() {
                     url: '/execute_queue',
                     type: "POST",
                     contentType: "application/json",
-                    data: JSON.stringify({"jsonrpc": "2.0", "method": "{{ activity_uri }}", "params": [code], "id": 1 }),
+                    data: JSON.stringify({"jsonrpc": "2.0", "method": "{{ activity_uri }}", "params": [code], "id": 1 ,
+                    "keypresses": keypresses, "mousepresses": mousepresses, "mousemovement": mouse }),
                     dataType: "json",
                     success: function(data, textStatus, jqXHR) {
 
@@ -331,7 +344,7 @@ $(document).ready(function() {
          }
          else
          {
-             alert("NO ES POSIBLE");
+
          }
      });
 
@@ -340,7 +353,7 @@ $(document).ready(function() {
         $.ajax({ url: '/get_result',
             type: "POST",
             contentType: "application/json",
-            data: JSON.stringify({"jsonrpc": "2.0", "method": "_execute", "params": [null], "id": task_id }),
+            data: JSON.stringify({"jsonrpc": "2.0", "method": "_execute", "params": ["{{ activity_uri }}"], "id": task_id }),
             success: function(data){
             //Update your dashboard gauge
             number_of_tries++;
@@ -349,6 +362,8 @@ $(document).ready(function() {
 
                     if (data.outcome != -1)
                     {
+                      $("#send_btn_queue").removeClass("disabled" );
+
                         var result = data.result;
                         if (result.result == "Failure")
                         {
@@ -408,8 +423,10 @@ $(document).ready(function() {
 
                    else
                    {
-                        $("#info_panel_body").html("");
-                        $('<p>'+ 'TIME OUT'+'<p/>', {class:"p"}).appendTo("#info_panel_body");
+                        $("#send_btn_queue").removeClass("disabled" );
+                        $("#result_panel_body").html("");
+
+                        $('<p>'+ 'TIME OUT'+'<p/>', {class:"p"}).appendTo("#result_panel_body");
 
                    }
                }
