Se removieron Dashboard, Settings y Profile

--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -306,9 +306,9 @@ background-position: left top;
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             {% if user_name %}
-            <li><a href="#">Dashboard</a></li>
+            <!-- <li><a href="#">Dashboard</a></li>
             <li><a href="#">Settings</a></li>
-            <li><a href="#">Profile</a></li>
+            <li><a href="#">Profile</a></li> -->
             <li><a class="navbar-user" href="#"> <img src="{{ user_image }}" alt=""/>  {{ user_name }}</a></li>
             <li><a href="/logout">Log out</a></li>
 
