--- a/templates/activitytree/welcome.html
+++ b/templates/activitytree/welcome.html
@@ -85,8 +85,46 @@ body {
         <p>En este prototipo nos enfocaremos a brindar tutorías de programación de manera informal,
             <a href="/login"> ingresa como uno de los estudiantes de prueba </a> y elige algún mini-curso.</p>
 
-        <p><a class="btn btn-default btn-lg" role="button">Ver más &raquo;</a></p>
+          <button class="btn btn-info" data-toggle="modal" data-target=".bs-example-modal-lg">Ver más &raquo;</button>
+      <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel"> Secuenciado Adaptativo</h4>
       </div>
+ <div class="modal-body">
+
+      <h3>Introducción</h3>
+		<p>
+		    Aprender a programar de forma autodidácta puede ser una tarea difícil. No sabemos por donde empezar, ¿que material debo leer
+		    primero?, ¿que ejercicios son los adecuados, para mi habilidad actual?, ¿que necesito instalar para empezar?,¿veo videos o leo?.
+			Uno de los problemas de la Web es que nos podemos perder entre tanta información, todos los recursos necesarios pueden estar ahí, pero
+			   ¿cual podría ser una secuencia adecuada para visitarlos?.
+		</p>
+		<p>
+		   Para el dise;o de protoboard nos basamos en una especificación llamada <a href="http://www.imsglobal.org/simplesequencing/"> IMS Simple Sequencing Specification (SS) </a>,
+		   la cual sirve para 	"representar el  comportamiento deseado en una experiencia de aprendizaje", básicamente es una manera de especificar
+		   como se deberían ir entregando las actividades de aprendizaje a los alumnos. No pretendemos cumplir totalmente con la especificación y más bien
+		   se ha ido adaptando a nuestras necesidades. Trabajamos en lograr que el sequenciado se adapte a los usuarios utilizando técnicas de
+		   personalización y sistemas de recomendación. Por ejemplo:
+
+		   <ul class="lead">
+              <li> Agregando reglas difusas para especificar el secuenciado.</li>
+              <li> Implementando un sistema de recomendación híbrido para proponer actividades de aprendizaje.</li>
+		      <li> Proponiendo un modelo para medir de manera indirecta el nivel de fluidez que experimenta el
+                 estudiante para sugerirle ejercicios adecuados.</li>
+              <li> Considerar información  contexto en los algoritmos de recomendación.</li>
+           </ul>
+     </p>
+
+			<img src="https://s3.amazonaws.com/mariogarcia/images/ActivityTree.png" class="img-responsive" alt="Responsive image">
+
+      </div>
+     </div>
+     </div>
+     </div>
+    </div>
     </div>
 
     <div class="container">
@@ -102,15 +140,6 @@ body {
         </div>
 
          {% endfor %}
-        <div class="col-md-4">
-          <h2>Python __init__</h2>
-          <p> Orientado a principiantes muy avanzados, que se maravillen con la simplicidad de este hola mundo: </p>
-            <p><code>print "hola mundo"</code></p>
-          <p> Utilizado por la  Nasa, Google, Instagram y por su puesto protoboard.org</p>
-
-          <p><a class="btn btn-primary" href="#" disabled="disabled" role="button">Próximamente &raquo;</a></p>
-        </div>
-
 
       </div>
 
