--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -306,23 +306,22 @@ background-position: left top;
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
 
-           {% comment %}
-            {% if user_name %}
-            <!-- <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Profile</a></li> -->
-            <li><a class="navbar-user" href="#"> <img src="{{ user_image }}" alt=""/>  {{ user_name }}</a></li>
+            {% if user.is_authenticated %}
+            <li><a href="#"></a></li>
+            <li><a href="#"> {{ user.first_name }} {{ user.last_name }}</a></li>
+            <li><a class="navbar-user" href="#"><img src="http://graph.facebook.com/{{user.email}}/picture?type=square"/>  </a></li>
             <li><a href="/logout">Log out</a></li>
 
            {% endif %}
-            {% endcomment %}
+
+{% comment %}
 
            {% if user.is_authenticated %}
 
-                 <li><a class="navbar-user" href="#"><img src="http://graph.facebook.com/{{user.email}}/picture?type=square"/> {{ user.first_name }} </a></li>.
-
+                 <li><a class="navbar-user" href="#"> {{ user.first_name }} </a></li>.
+                 <li><a href="/logout">Log out</a></li>
             {% endif %}
-
+ {% endcomment %}
             {% if not user_name %}
 
             <li><a href="/login">Log in</a></li>
