--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-
+{% comment %}
     <button class="btn btn-info" data-toggle="modal" data-target=".bs-example-modal-sm">Usuarios de Prueba</button>
 
       <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
@@ -56,12 +56,12 @@
      </div>
      </div>
 
+{% endcomment %}
+<form class="form-horizontal" role="form" method="post" action="{% url 'activitytree.views.login_view' %}" >{% csrf_token %}
 
-<form class="form-horizontal" role="form" method="post" action="{% url 'activitytree.views.login' %}" >{% csrf_token %}
 
 
-
-  <p class="lead">  Por favor, regístrate </p>
+  <p class="lead">  Por el momento solo puedes regístrate con Facebook </p>
 
 {% if form.errors %}
 
@@ -76,18 +76,18 @@
   <div class="form-group">
     <label for="id_username" class="col-sm-2 control-label">Usuario:</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="inputEmail3" placeholder="Usuario" id="id_username" maxlength="254" name="username">
+      <input type="text" class="form-control disabled" id="inputEmail3" placeholder="Usuario" id="id_username" maxlength="254" name="username">
     </div>
   </div>
   <div class="form-group">
     <label for="id_password" class="col-sm-2 control-label">Password:</label>
     <div class="col-sm-10">
-      <input type="password" class="form-control" id="id_password" placeholder="Password" name="password">
+      <input type="password" class="form-control disabled" id="id_password" placeholder="Password" name="password">
     </div>
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Login</button>
+      <button type="submit" class="btn btn-default disabled">Login</button>
     </div>
   </div>
 <input type="hidden" name="next" value="{{ next }}" />
