--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -61,7 +61,7 @@
 
 
 
-  <p class="lead">  Por el momento solo puedes regístrate con Facebook </p>
+  <p class="lead">  Por el momento solo puedes regístrate con <a href="/facebook/get_login"> Facebook </a></p>
 
 {% if form.errors %}
 
