Comentado seccion 'comentarios' y deshabilitar botones next y prev cuando le das click

--- a/templates/activitytree/activity.html
+++ b/templates/activitytree/activity.html
@@ -22,7 +22,7 @@
                </ul>
 
 
-        <div class="form-group">
+        <!-- <div class="form-group">
             <label for="r10">Comentario:</label>
             <select id="exit" name="objective_measure" class="form-control" >
 				<option value="70"> Ninguno </option>
@@ -31,7 +31,7 @@
 				<option value="20"> Para nada </option>
 	        </select>
 
-        </div>
+        </div> -->
        </form>
 
 
