--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -411,7 +411,16 @@ background-position: left top;
 
 
 
-
+$(document).ready(function() {
+  $('.previous').click(function() {
+    $('.previous').hide(0);
+    $('.next').hide(0);
+  });
+  $('.next').click(function() {
+    $('.previous').hide(0);
+    $('.next').hide(0);
+  });
+});
  
 
 
@@ -420,8 +429,6 @@ background-position: left top;
 
     </script>
   {% block scripts %}
-
-
 
   {% endblock scripts %}
   </body>
