--- a/templates/activitytree/program.html
+++ b/templates/activitytree/program.html
@@ -113,7 +113,7 @@
                </ul>
 
 
-        <div class="form-group">
+        <!-- <div class="form-group">
             <label for="r10">Comentario:</label>
             <select id="exit" name="objective_measure" class="form-control" >
 				<option value="70"> Ninguno </option>
@@ -122,7 +122,7 @@
 				<option value="20"> Para nada </option>
 	        </select>
 
-        </div>
+        </div> -->
        </form>
 
 
