--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -10,13 +10,16 @@
     <!-- Bootstrap core CSS -->
     <!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" rel="stylesheet">
      <!--
      <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}bluehaze.css" title="Blue Haze stylesheet" />
     <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}color-scheme.css" title="Blue Haze stylesheet" />
     -->
       <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/bootstrap-social.css" title="social stylesheet" />
-      <!-- Custom styles for this template -->
+      <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.mmenu.css" title="mmenu stylesheet" />
+      <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.mmenu.themes.css" title="mmenu stylesheet" />
+      <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.mmenu.header.css" title="mmenu stylesheet" />
+    <!-- Custom styles for this template -->
 
     <!-- Custom styles for this template -->
     <style type="text/css" media="screen">
@@ -369,6 +372,8 @@ background-position: left top;
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="http://{{MEDIA_URL}}js/jquery.mmenu.min.all.js"></script>
+    <script src="http://{{MEDIA_URL}}js/jquery.mmenu.header.min.js"></script>
 
 
   <script type="text/javascript" charset="utf-8">
@@ -376,6 +381,12 @@ background-position: left top;
 
 
         $( document ).ready(function() {
+
+            $("nav#nav_menu").mmenu({
+                    classes: "mm-light",header: true
+            });
+
+
             $( ".nav_next" ).bind( "click", function( event ) {
 
                    var form =  $("#learning_activity_form");
@@ -401,6 +412,7 @@ background-position: left top;
 
 
             });
+
         });
 
 
