--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -373,7 +373,7 @@ background-position: left top;
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script src="{{MEDIA_URL}}js/jquery.mmenu.min.all.js"></script>
-    <script src="{{MEDIA_URL}}js/jquery.mmenu.header.min.js"></script>
+    <script src="{{MEDIA_URL}}js/jquery.mmenu.header.js"></script>
 
 
   <script type="text/javascript" charset="utf-8">
