--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -67,11 +67,11 @@ body {
   }
 }
 
-/* Sidebar navigation */
+/* Sidebar navigation
 
 
 .nav-sidebar {
-  margin-right: -21px; /* 20px padding + 1px border */
+  margin-right: -21px;
   margin-bottom: 20px;
   margin-left: -20px;
 }
@@ -104,7 +104,7 @@ li.nav-header {
     text-transform: uppercase;
     margin-top: 15px;
 
-}
+}*/
 
 /*
  * Main content
@@ -143,10 +143,10 @@ li.nav-header {
   border-radius: 50%;
 }
 
+/*
 #navlist ul {
     list-style: none outside none;
      padding-left: 20px;
-    /*  padding-left: 0;*/
 }
 
 #navlist li {
@@ -220,6 +220,16 @@ background-image: url({{MEDIA_URL}}images/lullacons/doc-plain-white.png);
 background-position: left top;
 }
 
+.activity_current {
+    background-image: url("{{MEDIA_URL}}images/lullacons/arrow-double-right-green.png");
+    background-position:left top;
+    padding-left: 10px;
+    padding-bottom: 5px;
+    font-weight: bold;
+
+}
+
+*/
 
 .video {
     position: relative;
@@ -237,14 +247,6 @@ background-position: left top;
     height: 100%;
 }
 
-.activity_current {
-    background-image: url("{{MEDIA_URL}}images/lullacons/arrow-double-right-green.png");
-    background-position:left top;
-    padding-left: 10px;
-    padding-bottom: 5px;
-    font-weight: bold;
-
-}
 
         #panel_col{
       margin-top: 50px;
