--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -354,7 +354,10 @@ background-position: left top;
         </div>
 
           <div class="col-sm-9 col-sm-offset-3 col-md-7 col-md-offset-3 main">
+          <div class="header">
+				<a href="#nav_menu">Demo</a>
 
+			</div>
 
             {% block content %}
             <!--
