--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -296,7 +296,7 @@ background-position: left top;
   </head>
 
   <body>
-
+  <div>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -448,5 +448,7 @@ $(document).ready(function() {
   {% block scripts %}
 
   {% endblock scripts %}
+
+      </div>
   </body>
 </html>
