--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -296,7 +296,7 @@ background-position: left top;
   </head>
 
   <body>
-  <div>
+  <div id="page">
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
