--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -5,20 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Protoboard  Bootstrap</title>
+    <title>Protoboard</title>
 
     <!-- Bootstrap core CSS -->
     <!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" rel="stylesheet">
-     <!--
-     <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}bluehaze.css" title="Blue Haze stylesheet" />
-    <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}color-scheme.css" title="Blue Haze stylesheet" />
-    -->
-      <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/bootstrap-social.css" title="social stylesheet" />
-      <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.mmenu.css" title="mmenu stylesheet" />
-      <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.mmenu.themes.css" title="mmenu stylesheet" />
-      <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.mmenu.header.css" title="mmenu stylesheet" />
+	<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/bootstrap-social.css" title="social stylesheet" />
+    <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.mmenu.css" title="mmenu stylesheet" />
+    <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.mmenu.themes.css" title="mmenu stylesheet" />
+    <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.mmenu.header.css" title="mmenu stylesheet" />
     <!-- Custom styles for this template -->
 
     <!-- Custom styles for this template -->
@@ -26,12 +22,37 @@
 	 /*
  * Base structure
  */
-
-/* Move down content because we have a fixed navbar that is 50px tall */
+html {
+  position: relative;
+  min-height: 100%;
+}
 body {
-  padding-top: 50px;
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
+}
+body > .container {
+  padding: 60px 15px 0;
+}
+.container .text-muted {
+  margin: 20px 0;
 }
 
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+code {
+  font-size: 80%;
+}
 
 /*
  * Global add-ons
@@ -227,9 +248,8 @@ background-position: left top;
     padding-bottom: 5px;
     font-weight: bold;
 
-}
+}*/
 
-*/
 
 .video {
     position: relative;
@@ -297,10 +317,12 @@ background-position: left top;
 
   <body>
   <div id="page">
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container-fluid">
+    <div class="container">
+
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"  aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -308,7 +330,8 @@ background-position: left top;
           </button>
           <a class="navbar-brand" href="/">protoboard.org</a>
         </div>
-        <div class="navbar-collapse collapse">
+
+        <div  id="navbar" class=" collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
 
             {% if user.is_authenticated %}
@@ -317,17 +340,18 @@ background-position: left top;
             <li><a class="navbar-user" href="#"><img src="http://graph.facebook.com/{{user.email}}/picture?type=square"/>  </a></li>
             <li><a href="/logout">Log out</a></li>
 
-           {% endif %}
-
-{% comment %}
-
-           {% if user.is_authenticated %}
-
-                 <li><a class="navbar-user" href="#"> {{ user.first_name }} </a></li>.
-                 <li><a href="/logout">Log out</a></li>
             {% endif %}
- {% endcomment %}
-            {% if not user_name %}
+
+            {% comment %}
+
+                {% if user.is_authenticated %}
+
+                    <li><a class="navbar-user" href="#"> {{ user.first_name }} </a></li>.
+                     <li><a href="/logout">Log out</a></li>
+                {% endif %}
+            {% endcomment %}
+
+              {% if not user_name %}
 
             <li><a href="/login">Log in</a></li>
 
@@ -338,7 +362,7 @@ background-position: left top;
 
         </div>
       </div>
-    </div>
+    </nav>
 
 
 
@@ -372,13 +396,15 @@ background-position: left top;
 
       </div>
     </div>
+
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <script src="{{MEDIA_URL}}js/jquery.mmenu.min.all.js"></script>
-    <script src="{{MEDIA_URL}}js/jquery.mmenu.header.js"></script>
+    <script  type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script  type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script  type="text/javascript" src="{{MEDIA_URL}}js/jquery.mmenu.min.all.js"></script>
+    <script  type="text/javascript" src="{{MEDIA_URL}}js/jquery.mmenu.header.js"></script>
 
 
   <script type="text/javascript" charset="utf-8">
@@ -388,7 +414,8 @@ background-position: left top;
         $( document ).ready(function() {
 
             $("nav#nav_menu").mmenu({
-                    classes: "mm-light",header: true
+                classes: "mm-light",
+                header: true
             });
 
 
@@ -449,6 +476,7 @@ $(document).ready(function() {
 
   {% endblock scripts %}
 
-      </div>
+      </div><!-- container -->
+   </div> <!-- page -->
   </body>
 </html>
